[package]
name = "prodctrl"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Miller"]
repository = "https://github.com/paddymills/disorderly-gale"
description = "production control tools"
autobins = false
default-run = "prodctrl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
wax = "0.6.0"

[[bin]]
name = "prodctrl"
path = "src/main.rs"

[[bin]]
name = "hss_pc_dxf_remover"
path = "src/bin/remove_dxf.rs"
